--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,23 @@
     <string name="add_task_btn">Add a task button</string>
 
     <!-- Fragment Add Edit tasks -->
+    <string name="add_edit_task_fragment_new_task_title">New Task</string>
+    <string name="add_edit_task_fragment_edit_task_title">Edit Task</string>
     <string name="save_task_btn">Save a Task Button</string>
     <string name="add_task_task_hint">Task Name</string>
     <string name="set_priority_btn">Set a task to priority</string>
+    <string name="add_edit_tasks_date_created">Created: %1$s</string>
+
+    <!-- Snackbar Messages -->
+    <string name="snackbar_invalid_input">Name cannot be empty</string>
+    <string name="snackbar_task_deleted">Task deleted</string>
+    <string name="snackbar_task_added">Task added</string>
+    <string name="snackbar_task_updated">Task updated</string>
+
+    <!-- Delete all completed dialog -->
+    <string name="delete_all_completed_dialog_title">Confirm deletion</string>
+    <string name="delete_all_completed_dialog_message">Do you really want to delete all completed tasks?</string>
+    <string name="delete_all_completed_dialog_negative_btn">Cancel</string>
+    <string name="delete_all_completed_dialog_positive_btn">Yes</string>
 
 </resources>
